@@ -1,5 +1,10 @@
 2010-01-26  Jaroslav Hajek  <highegg@gmail.com>
 
+	* optimization/pqpnonneg.m: If Cholesky update failed, switch off
+	updating but continue.
+
+2010-01-26  Jaroslav Hajek  <highegg@gmail.com>
+
 	* pkg/pkg.m: More complement -> setdiff changes.
 
 2010-01-23  Jaroslav Hajek  <highegg@gmail.com>
